# chat4n6

./: .gitattributes  Cargo.toml  LICENSE  README.md  agents.md
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/commands/: report.rs  run.rs
cli/tests/: integration.rs
crates/chat4n6-core/: Cargo.toml  README.md
crates/chat4n6-core/src/: lib.rs  plaintext_fs.rs
crates/chat4n6-core/src/dar/: catalog.rs  fs.rs  header.rs  mod.rs
crates/chat4n6-core/tests/: dar_integration.rs
crates/chat4n6-fs/: Cargo.toml
crates/chat4n6-fs/src/: dar_fs.rs  ios_backup_fs.rs  lib.rs
crates/chat4n6-plugin-api/: Cargo.toml  README.md
crates/chat4n6-plugin-api/src/: fs.rs  lib.rs  timezone.rs  types.rs
crates/chat4n6-report/: Cargo.toml  README.md
crates/chat4n6-report/src/: case_uco.rs  lib.rs  manifest.rs  media_export.rs  paginator.rs  signed_pdf.rs  stats.rs  thread_view.rs  ufdr.rs
crates/chat4n6-report/templates/: base.html  calls.html  chat_page.html  deleted.html  gallery.html  index.html  snapshots.html  stats.html  timeline.html
crates/chat4n6-sqlite-forensics/: Cargo.toml  README.md
crates/chat4n6-sqlite-forensics/src/: btree.rs  carver.rs  context.rs  db.rs  dedup.rs  freeblock.rs  freelist.rs  fts.rs  gap.rs  header.rs  journal.rs  lib.rs  page.rs  page_map.rs  pragma.rs  record.rs  rowid_gap.rs  schema_sig.rs  unalloc.rs  varint.rs  verify.rs  wal.rs  wal_enhanced.rs
crates/chat4n6-sqlite-forensics/tests/: forensic_recovery.rs  nemetz_benchmark.rs  robustness.rs
crates/dar-archive/: Cargo.toml
crates/dar-archive/src/: archive.rs  catalog.rs  infinint.rs  lib.rs  scanner.rs
crates/dar-archive/tests/: discovery.rs  integration.rs
crates/ios-backup/: Cargo.toml
crates/ios-backup/src/: lib.rs
crates/plugins/chat4n6-ios-whatsapp/: Cargo.toml
crates/plugins/chat4n6-ios-whatsapp/src/: extractor.rs  lib.rs  schema.rs
crates/plugins/chat4n6-ios-whatsapp/tests/: integration_tests.rs
crates/plugins/chat4n6-ios-whatsapp/tests/fixtures/: chatstorage_schema.sql
crates/plugins/chat4n6-signal/: Cargo.toml
crates/plugins/chat4n6-signal/src/: extractor.rs  lib.rs
crates/plugins/chat4n6-signal/tests/: extractor_tests.rs
crates/plugins/chat4n6-signal/tests/fixtures/: signal_schema.sql
crates/plugins/chat4n6-telegram/: Cargo.toml
crates/plugins/chat4n6-telegram/src/: extractor.rs  lib.rs  tl.rs
crates/plugins/chat4n6-telegram/tests/fixtures/: telegram_schema.sql
crates/plugins/chat4n6-whatsapp/: Cargo.toml  README.md
crates/plugins/chat4n6-whatsapp/proptest-regressions/: extractor.txt
crates/plugins/chat4n6-whatsapp/src/: album.rs  anti_forensics.rs  cdn.rs  contact_report.rs  decrypt.rs  extractor.rs  group_metadata.rs  lib.rs  link.rs  location.rs  mention.rs  orphaned_media.rs  pin.rs  platform.rs  poll.rs  schema.rs  status.rs  system_event.rs  timezone.rs
crates/plugins/chat4n6-whatsapp/tests/fixtures/: fts5_schema.sql  modern_schema.sql
docs/: ARCHITECTURE.md  dar-format-spec-notes.md  sqlite-recovery-tools-research.md
docs/plans/: 2026-03-03-chat4n6-design.md  2026-03-03-chat4n6-implementation.md  2026-03-05-dar-ios-refactor-design.md  2026-03-05-dar-ios-refactor.md
docs/superpowers/plans/: 2026-03-23-forensic-backend-enhancements.md  2026-03-23-forensic-engine-enhancement.md
docs/superpowers/specs/: 2026-03-23-forensic-backend-enhancements-design.md  2026-03-23-forensic-engine-enhancement-design.md  2026-04-09-enhancement-roadmap.md  2026-05-06-enhancement-design-v2.md
docs/user-stories/cli/: chat-breadcrumb.json  forensic-warnings-in-report.json  nested-chat-layout.json  obfuscation.json  plugin-flag.json  report-subcommand.json  timeline-view.json
docs/user-stories/outputs/: pdf-signing.json  ufdr-format.json
docs/user-stories/performance/: streaming-extraction.json
docs/user-stories/sqlite-engine/: fts5-shadow-recovery.json  header-tamper-detection.json  new-warnings.json  rollback-journal.json
docs/user-stories/whatsapp/: c7-schema-version.json  c8-ghost-message-recovery.json  forwarded-label.json  media-type-extended.json  timezone-autodetect.json  wa-db-contacts.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_btree_parser.rs  fuzz_decrypt_crypt15.rs  fuzz_varint_decode.rs
scripts/ralph/: runner.sh
