[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SecurityRonin/chat4n6"
authors = ["4n6h4x0r"]

[workspace]
members = [
    "crates/chat4n6-plugin-api",
    "crates/chat4n6-core",
    "crates/chat4n6-sqlite-forensics",
    "crates/plugins/chat4n6-whatsapp",
    "crates/chat4n6-report",
    "cli",
]
resolver = "2"

[workspace.dependencies]
rust-embed = { version = "8", features = ["debug-embed"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nom = "7"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
sha2 = "0.10"
base64 = { version = "0.22", features = ["alloc"] }
rayon = "1"
log = "0.4"
env_logger = "0.11"
