[package]
name = "chat4n6"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chat4n6"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chat4n6-plugin-api = { path = "../crates/chat4n6-plugin-api" }
chat4n6-core = { path = "../crates/chat4n6-core" }
chat4n6-sqlite-forensics = { path = "../crates/chat4n6-sqlite-forensics" }
chat4n6-whatsapp = { path = "../crates/plugins/chat4n6-whatsapp" }
chat4n6-report = { path = "../crates/chat4n6-report" }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
rusqlite = { version = "0.31", features = ["backup"] }
