[package]
name = "chat4n6"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI for chat4n6: extract WhatsApp forensic artifacts from Android filesystem images"
readme = "README.md"
keywords = ["forensics", "whatsapp", "android", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "chat4n6"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chat4n6-plugin-api = { path = "../crates/chat4n6-plugin-api", version = "0.1" }
chat4n6-core = { path = "../crates/chat4n6-core", version = "0.1" }
chat4n6-sqlite-forensics = { path = "../crates/chat4n6-sqlite-forensics", version = "0.1" }
chat4n6-whatsapp = { path = "../crates/plugins/chat4n6-whatsapp", version = "0.1" }
chat4n6-report = { path = "../crates/chat4n6-report", version = "0.1" }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
rusqlite = { version = "0.31", features = ["backup"] }
