[package]
name = "chat4n6-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "DAR archive parser and filesystem abstraction for chat4n6"
readme = "README.md"
keywords = ["forensics", "dar", "android", "filesystem"]
categories = ["filesystem", "parser-implementations"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
chat4n6-plugin-api = { path = "../chat4n6-plugin-api", version = "0.1" }
nom = { workspace = true }
memmap2 = "0.9"
log = { workspace = true }

[dev-dependencies]
tempfile = "3"
