[package]
name = "chat4n6-plugin-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared plugin API types for the chat4n6 forensic toolkit"
readme = "README.md"
keywords = ["forensics", "whatsapp", "plugin", "android"]
categories = ["data-structures"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
