[package]
name = "chat4n6-report"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "HTML report generator for chat4n6 forensic extraction results"
readme = "README.md"
keywords = ["forensics", "report", "html", "whatsapp"]
categories = ["template-engine"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
chat4n6-plugin-api = { path = "../chat4n6-plugin-api", version = "0.1" }
rust-embed = { workspace = true }
tera = "1"
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
