[package]
name = "chat4n6-sqlite-forensics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Zero-copy SQLite forensics library: B-tree walker, WAL parser, and FTS recovery"
readme = "README.md"
keywords = ["forensics", "sqlite", "android", "recovery"]
categories = ["filesystem", "parser-implementations"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
chat4n6-plugin-api = { path = "../chat4n6-plugin-api", version = "0.1" }
rayon = { workspace = true }
sha2 = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.31", features = ["backup"] }
