[package]
name = "dar-archive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust reader for DAR (Disk ARchive) archives"
readme = "README.md"
keywords = ["dar", "archive", "forensics"]
categories = ["parser-implementations"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3"
