[package]
name = "chat4n6-whatsapp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
chat4n6-plugin-api = { path = "../../chat4n6-plugin-api" }
chat4n6-sqlite-forensics = { path = "../../chat4n6-sqlite-forensics" }
chrono = { workspace = true }
chrono-tz = { workspace = true }
aes = "0.8"
aes-gcm = "0.10"
cbc = "0.1"
log = { workspace = true }

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.31", features = ["backup"] }
