[package]
name = "chat4n6-whatsapp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WhatsApp forensic plugin: chat extraction, decryption, and call log recovery"
keywords = ["forensics", "whatsapp", "android", "decryption"]
categories = ["parser-implementations"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
chat4n6-plugin-api = { path = "../../chat4n6-plugin-api", version = "0.1" }
chat4n6-sqlite-forensics = { path = "../../chat4n6-sqlite-forensics", version = "0.1" }
chrono = { workspace = true }
chrono-tz = { workspace = true }
aes = "0.8"
aes-gcm = "0.10"
cbc = "0.1"
log = { workspace = true }

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.31", features = ["backup"] }
